# WEVOTE-web

./: .gitignore  .jscsrc  .jshintrc  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  bower.json  docker-compose.yml  gulpfile.js  package.json
app/: app.js  app.ts  common.ts  index.html  tsconfig.json
app/client/: gulpfile.js  index.html  tsconfig.json
app/client/scripts/: app.ts  controllers.ts  filters.ts  services.ts
app/client/views/: experiment.html  header.html  input.html  main.html  readsupload.html  register.html  results.html
app/common/: common.ts
app/metaviz/: gulpfile.js  index.html  metaviz-main.js  tsconfig.json
app/metaviz/definitions/: metaviz-main.d.ts  metaviz.d.ts
app/metaviz/scripts/: app.ts  common.ts  controllers.ts  directives.ts  filters.ts  services.ts
app/metaviz/styles/: metaviz-styles.css  mystyles.css
app/models/: algorithm.js  algorithm.json  algorithm.ts  experiment.js  experiment.ts  initdb.js  initdb.ts  model.ts  reads.js  reads.json  reads.ts  taxonomy.js  taxonomy.ts
app/public/: index.html  tsconfig.json
app/public/scripts/: app.js  app.ts  controllers.js  controllers.ts  directives.ts  filters.js  services.js  services.ts  wevote.js
app/public/scripts/maps/: wevote.js.map
app/public/styles/: mystyles.css
app/public/views/: experiment.html  footer.html  input.html  main.html  readsupload.html  taxonomyupload.html
app/routes/: algorithm.ts  algorithms.js  experiment.js  experiment.ts  reads.js  reads.ts  route.ts  simulatedReads.js  taxonomy.js  upload.js  upload.ts
app/scripts/: app.js  controllers.js  directives.js  services.js
app/server/: app.ts  config.js  config.ts  gulpfile.js  tsconfig.json
app/server/definitions/: app.d.ts  config.d.ts
app/server/definitions/models/: algorithm.d.ts  ensemblefile.d.ts  experiment.d.ts  initdb.d.ts  model.d.ts  reads.d.ts  remotefile.d.ts  taxonomy.d.ts  taxprofile.d.ts  user.d.ts  wevote.d.ts
app/server/definitions/routes/: algorithm.d.ts  experiment.d.ts  reads.d.ts  route.d.ts  taxonomy.d.ts  taxprofile.d.ts  upload.d.ts  user.d.ts  verify.d.ts
app/server/models/: algorithm.ts  ensemble_unclassified.csv  experiment.ts  initdb.ts  model.ts  reads.ts  remotefile.ts  taxline.ts  taxonomy.ts  taxprofile.ts  user.ts  wevote.csv  wevote.ts
app/server/routes/: algorithm.ts  experiment.ts  reads.ts  route.ts  taxonomy.ts  taxprofile.ts  upload.ts  user.ts  verify.ts
app/styles/: mystyles.css
app/views/: fileupload.html  footer.html  header.html  inputdata.html  main.html  preview.html  readsupload.html
cmake/: CppREST.cmake  Qt.cmake
data/: 03C31_S1_71_WEVOTE_Abundance.csv  03C31_S1_71_WEVOTE_Details.txt  meta-velvetg.contigs.fa.REMOVED.git-id  taxdump.tar.gz.REMOVED.git-id
docker.images/: Dockerfile
lagacy/: CMakeLists.txt  README.md  WEVOTE_Statistics.R  downloadTaxonomyDB.sh  install.sh  run_ABUNDANCE.sh  run_STATISTICS.sh  run_WEVOTE_PIPELINE.sh
lagacy/src/: ABUNDANCE.cpp  CMakeLists.txt  WEVOTE.cpp  create_db.cpp  create_db.hpp  headers.hpp  helpers.cpp  helpers.hpp
src/: CMakeLists.txt
src/app/: ABUNDANCE.cpp  CMakeLists.txt  CommandLineParser.hpp  WEVOTE.cpp  WevoteScriptHandler.cpp  WevoteScriptHandler.h  abundanceAnnotator.cpp  config.h.in  run_WEVOTE_PIPELINE.sh  wevote.cfg.in  wevoteClassifier.cpp  wevotePipeline.cpp
src/app/common/: CommandLineParser.hpp
src/app/rest/: CMakeLists.txt  RestHandler.cpp  RestHandler.h  StringBox.hpp  WevoteJSON.hpp  WevoteRestHandler.cpp  WevoteRestHandler.h  WevoteRestMessages.hpp  config.h.in  run_WEVOTE_PIPELINE.sh  stdafx.h  wevote.cfg  wevoteREST.cpp
src/app/service/: CMakeLists.txt  MyService.cpp  MyService.h  myservice.conf  myservice.conf.in
src/catch/: CMakeLists.txt
src/lib/: CMakeLists.txt  TaxonomyBuilder.cpp  TaxonomyBuilder.h  TaxonomyLineAnnotator.cpp  TaxonomyLineAnnotator.h  WevoteClassifier.cpp  WevoteClassifier.h  wevote.hpp
src/lib/common/: Rank.cpp  Rank.h  ReadInfo.cpp  ReadInfo.h  Serializable.hpp  TaxLine.cpp  TaxLine.h  Taxon.cpp  Taxon.h  create_db.cpp  create_db.hpp  headers.hpp  helpers.hpp  tax.gperf
src/lib/log/: Colors.hh  LogLevel.hh  Logger.cpp  Logger.h
src/qtservice/: .gitignore  CMakeLists.txt  ProjectConfig.cmake.in  qtservice.cpp  qtservice.h  qtservice.pri  qtservice_unix.cpp  qtservice_win.cpp  qtunixserversocket.h  qtunixsocket.h
src/test/: CMakeLists.txt  tests.cpp  tests.h  tests.h.in
web/: .gitignore  Dockerfile  TODO.md  docker-compose.yml  package.json
web/app/client/: env.js  gulpfile.js  index.html  tsconfig.json
web/app/client/scripts/: app.ts  controllers.ts  directives.ts  services.ts
web/app/client/styles/: mystyles.css
web/app/client/views/: experiment.html  header.html  info.html  input.html  login.html  main.html  register.html
web/app/common/: common.ts
web/app/metaviz/: tsconfig.json
web/app/metaviz/definitions/: metaviz.d.ts
web/app/metaviz/scripts/: common.ts  controllers.ts  directives.ts  services.ts
web/app/metaviz/styles/: metaviz-styles.css
web/app/server/: app.ts  config.js  gulpfile.js  tsconfig.json
web/app/server/models/: MiSeq_accuracy_ensemble_blast_kraken_tipp_clark_metaphlan.csv  ensemblefile.ts  experiment.ts  model.ts  reads.ts  remotefile.ts  taxprofile.csv  taxprofile.ts  user.ts  wevote.ts
web/app/server/routes/: experiment.ts  taxonomy.ts  taxprofile.ts  upload.ts
